--- a/css/styles.css
+++ b/css/styles.css
@@ -4,5 +4,73 @@
   box-sizing: border-box;
 }
 
-:root {
+.container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 1fr 6.5fr;
+}
+header {
+  background-color: red;
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+  height: 100px;
+  padding: 10px;
+}
+
+aside {
+  background-color: blue;
+  grid-column: 1 / 2;
+  grid-row: 2 / 4;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+main {
+  background-color: yellow;
+  grid-column: 2 / 3;
+  grid-row: 2 / 4;
+  padding: 20px;
+  display: grid;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  place-content: center;
+  height: fit-content;
+  width: fit-content;
+  justify-self: center;
+  border: 5px solid red;
+}
+
+.cell {
+  border: 1px solid black;
+  width: 100px;
+  height: 100px;
+  background-color: white;
+}
+
+.form {
+  display: grid;
+  padding: 20px;
+  border: 1px solid white;
+  gap: 5px;
+}
+
+.form > button {
+  width: 25%;
+  justify-self: center;
+  margin-top: 20px;
+}
+
+.scores {
+  display: flex;
+  justify-content: space-around;
+}
+
+.reset {
+  width: 90px;
+  align-self: center;
 }
