Fully working app

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --header-color: #2c3e50;
+  --header-color: #253444;
   --aside-color: #34495e;
   --main-content-color: #ecf0f1;
   --accent-color: rgb(0, 164, 164);
@@ -43,7 +43,7 @@ aside {
   padding: 20px;
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  gap: 15px;
   color: var(--main-content-color);
 }
 
@@ -109,7 +109,8 @@ main {
   align-self: center;
 }
 
-.reset {
+.reset,
+.rounds {
   width: 160px;
   align-self: center;
   padding: 10px 10px;
@@ -143,6 +144,7 @@ button:hover {
 button:disabled {
   background-color: gray;
   color: #fff;
+  border: 2px solid var(--header-color);
 }
 
 .next-round {
